# CCIoT_Fridge

./: .gitmodules  README.md  mic_with_server.ino
aws_lambdas/: consume_item.py  interpret_item_expiry.py  interpret_item_name.py  recipe_recommendation.py  signed_url_expiry.py  signed_url_item.py  update_database.py
esp32-fridge-magnet/fridge-magnet/: .gitignore
esp32-fridge-magnet/fridge-magnet/main/: CMakeLists.txt
esp32-fridge-magnet/fridge-magnet/main/mqtt/: Kconfig.projbuild  mqtt_auth.c
esp32-fridge-magnet/fridge-magnet/main/sd_card/: Kconfig.projbuild
esp32-fridge-magnet/fridge-magnet/main/speaker/: Kconfig.projbuild  speaker.c
esp32-fridge-magnet/mic-test-standalone/: CMakeLists.txt  README.md  sdkconfig.old
esp32-fridge-magnet/mic-test-standalone/main/: button_operations.h
esp32-fridge-magnet/s3-bucket-upload-download-test/: README.md  sdkconfig.old
esp32-fridge-magnet/s3-bucket-upload-download-test/main/: audio_operations.h  button_operations.h  http_operations.h  s3-bucket-upload-download-test.c
esp32-fridge-magnet/test-sd-audio-player/: sdkconfig  sdkconfig.old
esp32-fridge-magnet/test-sd-audio-player/main/: button_operations.h  file_operations.h  lcd_operations.h  sd_card_example_main.c
fridge-magnet/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
fridge-magnet/main/: CMakeLists.txt  Kconfig.projbuild  fridge-magnet.c  fridge_magnet.c  fridge_mqtt_config.h  idf_component.yml  mqtt-auth.c  mqtt_auth.c  pinouts.h
fridge-magnet/main/certs/fridgemagnet/: bc8cc37e8aad5b3d730940454e0d75c8ddc09c1c2a0dd83c60e5b3417d499d8d-certificate.pem.crt  bc8cc37e8aad5b3d730940454e0d75c8ddc09c1c2a0dd83c60e5b3417d499d8d-private.pem.key
fridge-magnet/main/mqtt/: mqtt_auth.c
fridge-magnet/main/sd_card/: sd_card.c  sd_card.h  sdcard.h
fridge-magnet/main/speaker/: speaker.c  speaker.h
mic-test-standalone/: README.md  sdkconfig
mic-test-standalone/PUTServer/: python_server.py
mic-test-standalone/main/: CMakeLists.txt  audio_operations.h  file_operations.h  http_operations.h  lcd_operations.h  mic-test-standalone.c  shared_states.h  task_operations.h
pi-fridge-magnet/: README.md  main.py
pi-fridge-magnet/audio/: audio_handler.py  player.py  recorder.py
pi-fridge-magnet/awshttp/: s3_operations.py
pi-fridge-magnet/button/: button.py
pi-fridge-magnet/certs/placeholder/: client.crt  (+1 more)
pi-fridge-magnet/queues/: queue_handler.py
pi-fridge-magnet/states/: base_state.py  consumption_state.py  state_handlers.py  stocking_state.py  verify_text.py
s3-bucket-upload-download-test/: CMakeLists.txt  sdkconfig
s3-bucket-upload-download-test/main/: CMakeLists.txt  file_operations.h
test-sd-audio-player/: CMakeLists.txt  README.md
test-sd-audio-player/main/: audio_operations.h  task_operations.h
weight-module/: README.md  weight-module.ino
(+1 files in other folders)
